# MangeTaMain

./: .dockerignore  .env.template  .gitignore  Dockerfile  MangeTaMain.ipynb  README.md  build_docs.sh  compose.yaml  decisions.md  docker-compose.yml  path_config.py  pyproject.toml  pyproject.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: CI-CD-docker.yml  docs.yml
.streamlit/: secrets.toml
MangeTaMain/: pytest.ini
MangeTaMain/tests/: conftest.py
docs/: Makefile  architecture.md  conf.py  database_config.md  index.md  installation.md  notebooks.md  usage.md
docs/api/: data_loader.md  data_visualization.md  index.md  preprocessing.md  streamlit_app.md
notebooks/: data_cleaning.ipynb  data_exploration.ipynb  data_vizualisation.ipynb  pr.ipynb
notebooks/subdir/: pr.ipynb
src/: __init__.py  constants.py  data_loader.py  data_management_with_psql.py  data_visualization.py  ensure_data.py  logging_config.py  preprocessing.py
src/db/: Dockerfile  db.py
src/db/init-scripts/: init.sql  load-data.sh
src/streamlit/: config.toml
src/streamlit/app/: comment.yaml  config.toml  streamlit_app.py  utils.py
src/streamlit/app/layouts/: page_conclusion.py  page_data_cleaning.py  page_visualisation.py
src/streamlit/src/mon_module/main.py/mon_module/main.py/: main.py
src/workflows/: CI-CD-docker.yml
tests/: contest.py  test_data_loader.py  test_vizualisations.py
tools/: convert_to_parquet.py
