[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mange-ta-main"
version = "0.1.0"
description = "Application Streamlit pour recommandation de recettes"
authors = ["leonnel <leonnel.sop@telecom-paris.fr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.50.0"
pandas = "^1.4.0"
numpy = "^1.23.0"
plotly = "^6.3.1"
seaborn = "^0.11.0"
matplotlib = "^3.5.0"
statsmodels = "^0.14.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=html"