[tool.poetry]
name = "mange-ta-main"
version = "0.1.0"
description = "Application Streamlit pour recommandation de recettes"
authors = ["Leonnel SOP <leonnel.sop@telecom-paris.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=2.3.4,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
streamlit = "^1.39.0"
plotly = ">=5.24.1,<6.0.0"
nbformat = "^5.10.0"
nbconvert = "^7.14.0"
pyyaml = "^6.0.3"
scipy = "^1.16.3"
gdown = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.6.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"
myst-parser = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"